# gridpath

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
marketing/: README.md  contact.html  index.html  package.json  privacy.html  style.css  terms.html  vercel.json
scripts/: build-mac.sh  build-platform.sh
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-10-10-232810_add_tables/: up.sql
src-tauri/migrations/2026-03-10-000000_add_skill_description/: down.sql  up.sql
src-tauri/migrations/2026-04-21-000000_add_usage_session_tokens/: down.sql  up.sql
src-tauri/migrations/2026-05-04-000000_add_run_memory_log/: down.sql  up.sql
src-tauri/migrations/2026-05-05-000000_add_cloud_execution/: down.sql  up.sql
src-tauri/migrations/2026-05-06-000000_remap_cloud_to_force_cloud/: down.sql  up.sql
src-tauri/migrations/2026-05-06-100000_drop_force_cloud/: down.sql  up.sql
src-tauri/migrations/2026-05-19-000000_add_spreadsheet_sessions/: down.sql  up.sql
src-tauri/migrations/2026-05-25-000000_add_session_token_totals/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: mod.rs  openai_codex_oauth.rs
src-tauri/src/bootstrap/: fix_path_env.rs  mod.rs
src-tauri/src/configuration/: database.rs  mod.rs  state.rs
src-tauri/src/engine/: mod.rs  provider_config.rs  web_fetcher.rs
src-tauri/src/engine/llm_providers/: claude.rs  mod.rs  openai_codex.rs
src-tauri/src/engine/spreadsheet_agent/: commands.rs  tools.rs
src-tauri/src/engine/workbook/: commands.rs  mod.rs  session_commands.rs  settings_commands.rs
src-tauri/src/entity/: mod.rs  spreadsheet_session.rs  user_auth.rs
src-tauri/src/repository/: mod.rs  settings_repository.rs  spreadsheet_session_repository.rs  user_auth_repository.rs
src/components/: ColorModeManager.tsx
src/repository/: clarification_repository.rs
src/utils/: claudeStreamAssembler.ts
(+23 files in other folders)
