[package]
name = "gridpath"
version = "0.0.1"
description = "Gridpath"
authors = ["Heelix"]
license = ""
repository = ""
default-run = "gridpath"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

# Async runtime + HTTP/streaming
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "gzip"] }
eventsource-stream = "0.2"

# Logging
log = "0.4"

# Tauri 2 core + plugins
tauri = { version = "2.0", features = ["protocol-asset", "devtools", "tray-icon"] }
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "v2" }
tauri-plugin-updater = "2.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
rusqlite-from-row = "0.2"
diesel = { version = "2.1", features = ["sqlite"] }
diesel_migrations = "2.1"

# Auth (OAuth PKCE for OpenAI Codex / ChatGPT Plus-Pro)
base64 = "0.22"
sha2 = "0.10"
url = "2.5"
urlencoding = "2.1"
rand = "0.8"

# Misc utilities
chrono = "0.4"
dirs = "5.0"
lazy_static = "1.4"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1"

[target."cfg(target_os = \"windows\")".dependencies]
sysinfo = "0.32"

[target."cfg(unix)".dependencies]
nix = { version = "0.28", features = ["signal"] }

[target."cfg(not(target_os = \"windows\"))".dependencies]
strip-ansi-escapes = "0.2"

[features]
# Used for production builds, or when `devPath` points to a filesystem
# and the built-in dev server is disabled.
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "gridpath"
path = "src/lib.rs"
